--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.553.0",
     "react-dom": "^19.2.0",
     "@google/genai": "^1.29.0",
-    "idb": "8.0.0"
+    "idb": "8.0.0",
+    "peerjs": "1.5.4",
+    "qrcode": "1.5.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
